syntax = "proto3";

package worker;

option go_package = "internal/master/pb;pb";
//protoc --go_out=. --go-grpc_out=. proto/master.proto
service TicketMaster {
rpc RegisterWorker(WorkerInfo) returns (RegisterReply);
rpc UpdateTaskStatus(TaskStatusUpdate) returns (UpdateReply);

}
message WorkerInfo {
  string worker_id = 1;
  string address = 2;
  int32 status = 3; // "Idle", "Working", "Risking"
  string TaskAssigned = 4; //Task id

}
message RegisterReply {
  bool success = 1;
  string message = 2;
}


message TaskStatusUpdate {
  string task_id = 1;
  string worker_id = 2;
  string status = 3; 
}

message UpdateReply {
  bool success = 1;
  string message = 2;
}